--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,7 +11,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: #0a0e27;
-  color: #e2e8f0;
+  color: #f1f5f9;
 }
 
 #root {
